--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -28835,143 +28835,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>population</th>\n",
-       "      <th>gdp_for_year ($)</th>\n",
-       "      <th>gdp_per_capita ($)</th>\n",
-       "      <th>sex_male</th>\n",
-       "      <th>generation_G.I. Generation</th>\n",
-       "      <th>generation_Generation X</th>\n",
-       "      <th>generation_Generation Z</th>\n",
-       "      <th>generation_Millenials</th>\n",
-       "      <th>generation_Silent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>24</td>\n",
-       "      <td>312900</td>\n",
-       "      <td>2.156625e+09</td>\n",
-       "      <td>796</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>54</td>\n",
-       "      <td>308000</td>\n",
-       "      <td>2.156625e+09</td>\n",
-       "      <td>796</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>24</td>\n",
-       "      <td>289700</td>\n",
-       "      <td>2.156625e+09</td>\n",
-       "      <td>796</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>75</td>\n",
-       "      <td>21800</td>\n",
-       "      <td>2.156625e+09</td>\n",
-       "      <td>796</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>34</td>\n",
-       "      <td>274300</td>\n",
-       "      <td>2.156625e+09</td>\n",
-       "      <td>796</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   age  population   gdp_for_year ($)   gdp_per_capita ($)  sex_male  \\\n",
-       "0   24      312900        2.156625e+09                 796         1   \n",
-       "1   54      308000        2.156625e+09                 796         1   \n",
-       "2   24      289700        2.156625e+09                 796         0   \n",
-       "3   75       21800        2.156625e+09                 796         1   \n",
-       "4   34      274300        2.156625e+09                 796         1   \n",
-       "\n",
-       "   generation_G.I. Generation  generation_Generation X  \\\n",
-       "0                           0                        1   \n",
-       "1                           0                        0   \n",
-       "2                           0                        1   \n",
-       "3                           1                        0   \n",
-       "4                           0                        0   \n",
-       "\n",
-       "   generation_Generation Z  generation_Millenials  generation_Silent  \n",
-       "0                        0                      0                  0  \n",
-       "1                        0                      0                  1  \n",
-       "2                        0                      0                  0  \n",
-       "3                        0                      0                  0  \n",
-       "4                        0                      0                  0  "
+       "(27820, 10)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler= MinMaxScaler()\n",
+    "data=pd.DataFrame(scaler.fit_transform(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data,label1,test_size=0.2, random_state = 0,shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(22256, 10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5564, 10)"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22256,)"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
